--- a/src/web/Visitcard_Ilya.html
+++ b/src/web/Visitcard_Ilya.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title> Ilya Kamen's personal website </title>
 </head>
 <body>
 <div class="wrapper">
@@ -21,9 +21,10 @@
         <article class="intro">
             <div class="intro-text">
                 <h1>I'm Ilya Kamen.</h1>
-                <p>I'm a software developer and Python enthusiast. Focus and clarity is everything.</p>
-                <p>I believe in sucess by trying. </p>
-                <p> Software is eating the world. Ilya Kamenshchikov likes this.</p><p>Find me here:</p>
+                <p>I'm a software engineer working with Machine Learning and DevOps. I am also a Python enthusiast and open source contributor. </p>
+                <p> </p>
+                <p>Software is eating the world. Ilya Kamen likes this.</p>
+                <p>Find me here:</p>
                 <address class="social-widgets">
                     <ul class="socials">
                         <li class="socials-item"><a href="https://twitter.com/ikamen7" class="socials-link socials-link-twitter"><span class="socials-link-text">twitter</span></a></li>
@@ -43,18 +44,10 @@
                 <div class="cards">
                     <article class="card">
                         <div class="card-header">
-                            <h3 class="card-name">To build self-reproducing robots!</h3>
+                            <h3 class="card-name">flynt - python code linter</h3>
                         </div>
                         <div class="card-content">
-                            <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet <a href="/"> [more...] </a></p>
-                        </div>
-                    </article>
-                    <article class="card">
-                        <div class="card-header">
-                            <h3 class="card-name">Solar energy from sendlands</h3>
-                        </div>
-                        <div class="card-content">
-                            <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
+                            <p>There are three ways to format strings in python, and one is better than others. Flynt automates transforming python code to use <a href="https://www.python.org/dev/peps/pep-0498/">f-strings</a>. Why should you convert? Because f-strings are faster and more readable! <a href="https://medium.com/@ikamenshchikov/f-strings-make-your-python-code-faster-and-more-readable-today-579ef9ca0313">[more...]</a> </p>
                         </div>
                     </article>
                     <article class="card">
@@ -62,15 +55,23 @@
                             <h3 class="card-name">Code generating program</h3>
                         </div>
                         <div class="card-content">
+                            <p>What's an ultimate machine learnign model? A python program, because it can represent a neural network, non-differentiable computation and a lot of things humans didn't discover yet. How to generate that program? Evolutionary algorithm is a slow, but scalable approach. <a href="/"> [more...] </a></p>
+                        </div>
+                    </article>
+                    <article class="card">
+                        <div class="card-header">
+                            <h3 class="card-name">To build self-replicating robots!</h3>
+                        </div>
+                        <div class="card-content">
                             <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet <a href="/"> [more...] </a></p>
                         </div>
                     </article>
                     <article class="card">
                         <div class="card-header">
-                            <h3 class="card-name">flynt - doing things bettter</h3>
+                            <h3 class="card-name">Solar energy from sand</h3>
                         </div>
                         <div class="card-content">
-                            <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+                            <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua.</p>
                         </div>
                     </article>
                 </div>
@@ -174,22 +175,22 @@
                 <ul>
                     <li>
                         <div class="timeline-card">
-                            <time>2019 - now</time> <h3>Amazon</h3> <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium.</p>
+                            <time>2019 - now</time> <h3>Software Engineer @ Amazon</h3> <p>Design and implementation of reinforcement learning solution for long tail utterances in Alexa; Reworked integration testing solution for Alexa NLU to save over 500k$ per year in compute; Operational Excellence - deep knowledge of products my team supports, helping customers and driving improvements of legacy software </p>
                         </div>
                     </li>
                     <li>
                         <div class="timeline-card">
-                            <time>2016 - 2019</time> <h3>Capgemini</h3> <p>Proin quam velit, efficitur vel neque vitae, rhoncus commodo mi. Suspendisse finibus mauris et bibendum molestie. Aenean ex augue, varius et pulvinar in, pretium non nisi.</p>
+                            <time>2016 - 2019</time> <h3>Machine Learning Engineer @ Capgemini</h3> <p>Automated training of object detection models based on tensorflow object detection API; Designed and implemented end-to-end solution with web frontend and hardware integration; Introduced unit tests, integration tests and CI to the project. The system was used to solve PoC use cases for customers in automotive industry which led to further contracts for Capgemini. Our team of 3 has received an innovation award for this work.</p>
                         </div>
                     </li>
                     <li>
                         <div class="timeline-card">
-                            <time>2012 - 2016</time> <h3>HSRW</h3> <p>Proin iaculis, nibh eget efficitur varius, libero tellus porta dolor, at pulvinar tortor ex eget ligula. Integer eu dapibus arcu, sit amet sollicitudin eros.</p>
+                            <time>2012 - 2016</time> <h3>HSRW - BSc. Electronics</h3> <p>In this and other university pursuits I have acquired broad knowledge in math, physics and science. As electronics student, I was able to work with hardware including sensors, actuators and microcontrollers. </p>
                         </div>
                     </li>
                     <li>
                         <div class="timeline-card">
-                            <time>Start - 2012</time> <h3>Siberia</h3> <p>In mattis elit vitae odio posuere, nec maximus massa varius. Suspendisse varius volutpat mattis. Vestibulum id magna est.</p>
+                            <time>Start - 2012</time> <h3>Frostbiten Siberia</h3> <p>I'm a fighter and will seize opportunities, easy and hard. </p>
                         </div>
                     </li>
                 </ul>
